<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_description">My Nanodegree Apps!</string>
    <string name="project_name_1">Popular Movies</string>
    <string name="project_name_2">Stock Hawk</string>
    <string name="project_name_3">Build it Bigger</string>
    <string name="project_name_4">Make Your App Material</string>
    <string name="project_name_5">Go Ubiquitous</string>
    <string name="project_name_6">Capstone</string>

    <string name="launch_text">This button will launch my %s app!</string>
</resources>
